Cambiado BoardTest de integración en el método testUpdateBoardState, cambiado getAliens().getLast() por getAliens().get(0)